--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<div id="app">
-  <div ui-view></div>
-</div>
+
+<div ng-app="app">
+  <div ng-controller="myController">
+    <div class="container">
+      <ul class="progressbar">
+        <li
+         class="{{activeQuestNode(($index), current_progress)}}"
+         ng-repeat="step in steps track by $index"></li>
+        </ul>
+    </div>
+  </div>
+</div>	
